IS203 编译原理/语法分析/seal.output
Terminals unused in grammar

    UMINUS


Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl
    3          | decl_list decl

    4 decl: variableDecl
    5     | callDecl

    6 variableDecl_list: variableDecl
    7                  | variableDecl_list variableDecl

    8 variableDecl: VAR variable ';'

    9 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID stmtBlock
   10         | FUNC OBJECTID '(' ')' TYPEID stmtBlock

   11 variable: OBJECTID TYPEID

   12 variable_list: variable
   13              | variable_list ',' variable

   14 stmtBlock: '{' variableDecl_list stmt_list '}'
   15          | '{' stmt_list '}'
   16          | '{' variableDecl_list '}'
   17          | '{' '}'

   18 stmt_list: stmt
   19          | stmt_list stmt

   20 stmt: ';'
   21     | Expr ';'
   22     | ifStmt
   23     | whileStmt
   24     | forStmt
   25     | breakStmt
   26     | continueStmt
   27     | returnStmt
   28     | stmtBlock

   29 ifStmt: IF Expr stmtBlock
   30       | IF Expr stmtBlock ELSE stmtBlock

   31 whileStmt: WHILE Expr stmtBlock

   32 forStmt: FOR Expr ';' Expr ';' Expr stmtBlock
   33        | FOR ';' Expr ';' Expr stmtBlock
   34        | FOR Expr ';' ';' Expr stmtBlock
   35        | FOR Expr ';' Expr ';' stmtBlock
   36        | FOR Expr ';' ';' stmtBlock
   37        | FOR ';' Expr ';' stmtBlock
   38        | FOR ';' ';' Expr stmtBlock
   39        | FOR ';' ';' stmtBlock

   40 returnStmt: RETURN Expr ';'
   41           | RETURN ';'

   42 continueStmt: CONTINUE ';'

   43 breakStmt: BREAK ';'

   44 Expr: OBJECTID '=' Expr
   45     | CONST_BOOL
   46     | CONST_INT
   47     | CONST_FLOAT
   48     | CONST_STRING
   49     | call
   50     | '(' Expr ')'
   51     | OBJECTID
   52     | Expr '+' Expr
   53     | Expr '-' Expr
   54     | Expr '*' Expr
   55     | Expr '/' Expr
   56     | Expr '%' Expr
   57     | '-' Expr
   58     | Expr '<' Expr
   59     | Expr LE Expr
   60     | Expr EQUAL Expr
   61     | Expr NE Expr
   62     | Expr GE Expr
   63     | Expr '>' Expr
   64     | Expr AND Expr
   65     | Expr OR Expr
   66     | Expr '^' Expr
   67     | '!' Expr
   68     | '~' Expr
   69     | Expr '&' Expr
   70     | Expr '|' Expr

   71 call: OBJECTID '(' actual_list ')'
   72     | OBJECTID '(' ')'

   73 actual_list: actual
   74            | actual_list ',' actual

   75 actual: Expr


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 67
    '%' (37) 56
    '&' (38) 69
    '(' (40) 9 10 50 71 72
    ')' (41) 9 10 50 71 72
    '*' (42) 54
    '+' (43) 52
    ',' (44) 13 74
    '-' (45) 53 57
    '/' (47) 55
    ';' (59) 8 20 21 32 33 34 35 36 37 38 39 40 41 42 43
    '<' (60) 58
    '=' (61) 44
    '>' (62) 63
    '^' (94) 66
    '{' (123) 14 15 16 17
    '|' (124) 70
    '}' (125) 14 15 16 17
    '~' (126) 68
    error (256)
    IF (258) 29 30
    ELSE (260) 30
    WHILE (261) 31
    FOR (262) 32 33 34 35 36 37 38 39
    BREAK (263) 43
    CONTINUE (264) 42
    FUNC (265) 9 10
    RETURN (266) 40 41
    CONST_BOOL <boolean> (267) 45
    CONST_INT <symbol> (268) 46
    CONST_STRING <symbol> (269) 48
    CONST_FLOAT <symbol> (270) 47
    VAR (271) 8
    AND (274) 64
    OR (275) 65
    EQUAL (276) 60
    NE (277) 61
    GE (278) 62
    LE (279) 59
    OBJECTID <symbol> (284) 9 10 11 44 51 71 72
    TYPEID <symbol> (285) 9 10 11
    UMINUS (287)
    minus_c (288)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    decl_list <decls> (47)
        on left: 2 3
        on right: 1 3
    decl <decl> (48)
        on left: 4 5
        on right: 2 3
    variableDecl_list <variableDecls> (49)
        on left: 6 7
        on right: 7 14 16
    variableDecl <variableDecl> (50)
        on left: 8
        on right: 4 6 7
    callDecl <callDecl> (51)
        on left: 9 10
        on right: 5
    variable <variable> (52)
        on left: 11
        on right: 8 12 13
    variable_list <variables> (53)
        on left: 12 13
        on right: 9 13
    stmtBlock <stmtBlock> (54)
        on left: 14 15 16 17
        on right: 9 10 28 29 30 31 32 33 34 35 36 37 38 39
    stmt_list <stmts> (55)
        on left: 18 19
        on right: 14 15 19
    stmt <stmt> (56)
        on left: 20 21 22 23 24 25 26 27 28
        on right: 18 19
    ifStmt <ifStmt> (57)
        on left: 29 30
        on right: 22
    whileStmt <whileStmt> (58)
        on left: 31
        on right: 23
    forStmt <forStmt> (59)
        on left: 32 33 34 35 36 37 38 39
        on right: 24
    returnStmt <returnStmt> (60)
        on left: 40 41
        on right: 27
    continueStmt <continueStmt> (61)
        on left: 42
        on right: 26
    breakStmt <breakStmt> (62)
        on left: 43
        on right: 25
    Expr <expr> (63)
        on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
        on right: 21 29 30 31 32 33 34 35 36 37 38 40 44 50 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 75
    call <call> (64)
        on left: 71 72
        on right: 49
    actual_list <actuals> (65)
        on left: 73 74
        on right: 71 74
    actual <actual> (66)
        on left: 75
        on right: 73 74


State 0

    0 $accept: . program $end

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    program       go to state 3
    decl_list     go to state 4
    decl          go to state 5
    variableDecl  go to state 6
    callDecl      go to state 7


State 1

    9 callDecl: FUNC . OBJECTID '(' variable_list ')' TYPEID stmtBlock
   10         | FUNC . OBJECTID '(' ')' TYPEID stmtBlock

    OBJECTID  shift, and go to state 8


State 2

    8 variableDecl: VAR . variable ';'

    OBJECTID  shift, and go to state 9

    variable  go to state 10


State 3

    0 $accept: program . $end

    $end  shift, and go to state 11


State 4

    1 program: decl_list .
    3 decl_list: decl_list . decl

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    $default  reduce using rule 1 (program)

    decl          go to state 12
    variableDecl  go to state 6
    callDecl      go to state 7


State 5

    2 decl_list: decl .

    $default  reduce using rule 2 (decl_list)


State 6

    4 decl: variableDecl .

    $default  reduce using rule 4 (decl)


State 7

    5 decl: callDecl .

    $default  reduce using rule 5 (decl)


State 8

    9 callDecl: FUNC OBJECTID . '(' variable_list ')' TYPEID stmtBlock
   10         | FUNC OBJECTID . '(' ')' TYPEID stmtBlock

    '('  shift, and go to state 13


State 9

   11 variable: OBJECTID . TYPEID

    TYPEID  shift, and go to state 14


State 10

    8 variableDecl: VAR variable . ';'

    ';'  shift, and go to state 15


State 11

    0 $accept: program $end .

    $default  accept


State 12

    3 decl_list: decl_list decl .

    $default  reduce using rule 3 (decl_list)


State 13

    9 callDecl: FUNC OBJECTID '(' . variable_list ')' TYPEID stmtBlock
   10         | FUNC OBJECTID '(' . ')' TYPEID stmtBlock

    OBJECTID  shift, and go to state 9
    ')'       shift, and go to state 16

    variable       go to state 17
    variable_list  go to state 18


State 14

   11 variable: OBJECTID TYPEID .

    $default  reduce using rule 11 (variable)


State 15

    8 variableDecl: VAR variable ';' .

    $default  reduce using rule 8 (variableDecl)


State 16

   10 callDecl: FUNC OBJECTID '(' ')' . TYPEID stmtBlock

    TYPEID  shift, and go to state 19


State 17

   12 variable_list: variable .

    $default  reduce using rule 12 (variable_list)


State 18

    9 callDecl: FUNC OBJECTID '(' variable_list . ')' TYPEID stmtBlock
   13 variable_list: variable_list . ',' variable

    ')'  shift, and go to state 20
    ','  shift, and go to state 21


State 19

   10 callDecl: FUNC OBJECTID '(' ')' TYPEID . stmtBlock

    '{'  shift, and go to state 22

    stmtBlock  go to state 23


State 20

    9 callDecl: FUNC OBJECTID '(' variable_list ')' . TYPEID stmtBlock

    TYPEID  shift, and go to state 24


State 21

   13 variable_list: variable_list ',' . variable

    OBJECTID  shift, and go to state 9

    variable  go to state 25


State 22

   14 stmtBlock: '{' . variableDecl_list stmt_list '}'
   15          | '{' . stmt_list '}'
   16          | '{' . variableDecl_list '}'
   17          | '{' . '}'

    IF            shift, and go to state 26
    WHILE         shift, and go to state 27
    FOR           shift, and go to state 28
    BREAK         shift, and go to state 29
    CONTINUE      shift, and go to state 30
    RETURN        shift, and go to state 31
    VAR           shift, and go to state 2
    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    ';'           shift, and go to state 40
    '('           shift, and go to state 41
    '{'           shift, and go to state 22
    '}'           shift, and go to state 42

    variableDecl_list  go to state 43
    variableDecl       go to state 44
    stmtBlock          go to state 45
    stmt_list          go to state 46
    stmt               go to state 47
    ifStmt             go to state 48
    whileStmt          go to state 49
    forStmt            go to state 50
    returnStmt         go to state 51
    continueStmt       go to state 52
    breakStmt          go to state 53
    Expr               go to state 54
    call               go to state 55


State 23

   10 callDecl: FUNC OBJECTID '(' ')' TYPEID stmtBlock .

    $default  reduce using rule 10 (callDecl)


State 24

    9 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID . stmtBlock

    '{'  shift, and go to state 22

    stmtBlock  go to state 56


State 25

   13 variable_list: variable_list ',' variable .

    $default  reduce using rule 13 (variable_list)


State 26

   29 ifStmt: IF . Expr stmtBlock
   30       | IF . Expr stmtBlock ELSE stmtBlock

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    Expr  go to state 57
    call  go to state 55


State 27

   31 whileStmt: WHILE . Expr stmtBlock

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    Expr  go to state 58
    call  go to state 55


State 28

   32 forStmt: FOR . Expr ';' Expr ';' Expr stmtBlock
   33        | FOR . ';' Expr ';' Expr stmtBlock
   34        | FOR . Expr ';' ';' Expr stmtBlock
   35        | FOR . Expr ';' Expr ';' stmtBlock
   36        | FOR . Expr ';' ';' stmtBlock
   37        | FOR . ';' Expr ';' stmtBlock
   38        | FOR . ';' ';' Expr stmtBlock
   39        | FOR . ';' ';' stmtBlock

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    ';'           shift, and go to state 59
    '('           shift, and go to state 41

    Expr  go to state 60
    call  go to state 55


State 29

   43 breakStmt: BREAK . ';'

    ';'  shift, and go to state 61


State 30

   42 continueStmt: CONTINUE . ';'

    ';'  shift, and go to state 62


State 31

   40 returnStmt: RETURN . Expr ';'
   41           | RETURN . ';'

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    ';'           shift, and go to state 63
    '('           shift, and go to state 41

    Expr  go to state 64
    call  go to state 55


State 32

   45 Expr: CONST_BOOL .

    $default  reduce using rule 45 (Expr)


State 33

   46 Expr: CONST_INT .

    $default  reduce using rule 46 (Expr)


State 34

   48 Expr: CONST_STRING .

    $default  reduce using rule 48 (Expr)


State 35

   47 Expr: CONST_FLOAT .

    $default  reduce using rule 47 (Expr)


State 36

   44 Expr: OBJECTID . '=' Expr
   51     | OBJECTID .
   71 call: OBJECTID . '(' actual_list ')'
   72     | OBJECTID . '(' ')'

    '='  shift, and go to state 65
    '('  shift, and go to state 66

    $default  reduce using rule 51 (Expr)


State 37

   57 Expr: '-' . Expr

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    Expr  go to state 67
    call  go to state 55


State 38

   67 Expr: '!' . Expr

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    Expr  go to state 68
    call  go to state 55


State 39

   68 Expr: '~' . Expr

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    Expr  go to state 69
    call  go to state 55


State 40

   20 stmt: ';' .

    $default  reduce using rule 20 (stmt)


State 41

   50 Expr: '(' . Expr ')'

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    Expr  go to state 70
    call  go to state 55


State 42

   17 stmtBlock: '{' '}' .

    $default  reduce using rule 17 (stmtBlock)


State 43

    7 variableDecl_list: variableDecl_list . variableDecl
   14 stmtBlock: '{' variableDecl_list . stmt_list '}'
   16          | '{' variableDecl_list . '}'

    IF            shift, and go to state 26
    WHILE         shift, and go to state 27
    FOR           shift, and go to state 28
    BREAK         shift, and go to state 29
    CONTINUE      shift, and go to state 30
    RETURN        shift, and go to state 31
    VAR           shift, and go to state 2
    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    ';'           shift, and go to state 40
    '('           shift, and go to state 41
    '{'           shift, and go to state 22
    '}'           shift, and go to state 71

    variableDecl  go to state 72
    stmtBlock     go to state 45
    stmt_list     go to state 73
    stmt          go to state 47
    ifStmt        go to state 48
    whileStmt     go to state 49
    forStmt       go to state 50
    returnStmt    go to state 51
    continueStmt  go to state 52
    breakStmt     go to state 53
    Expr          go to state 54
    call          go to state 55


State 44

    6 variableDecl_list: variableDecl .

    $default  reduce using rule 6 (variableDecl_list)


State 45

   28 stmt: stmtBlock .

    $default  reduce using rule 28 (stmt)


State 46

   15 stmtBlock: '{' stmt_list . '}'
   19 stmt_list: stmt_list . stmt

    IF            shift, and go to state 26
    WHILE         shift, and go to state 27
    FOR           shift, and go to state 28
    BREAK         shift, and go to state 29
    CONTINUE      shift, and go to state 30
    RETURN        shift, and go to state 31
    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    ';'           shift, and go to state 40
    '('           shift, and go to state 41
    '{'           shift, and go to state 22
    '}'           shift, and go to state 74

    stmtBlock     go to state 45
    stmt          go to state 75
    ifStmt        go to state 48
    whileStmt     go to state 49
    forStmt       go to state 50
    returnStmt    go to state 51
    continueStmt  go to state 52
    breakStmt     go to state 53
    Expr          go to state 54
    call          go to state 55


State 47

   18 stmt_list: stmt .

    $default  reduce using rule 18 (stmt_list)


State 48

   22 stmt: ifStmt .

    $default  reduce using rule 22 (stmt)


State 49

   23 stmt: whileStmt .

    $default  reduce using rule 23 (stmt)


State 50

   24 stmt: forStmt .

    $default  reduce using rule 24 (stmt)


State 51

   27 stmt: returnStmt .

    $default  reduce using rule 27 (stmt)


State 52

   26 stmt: continueStmt .

    $default  reduce using rule 26 (stmt)


State 53

   25 stmt: breakStmt .

    $default  reduce using rule 25 (stmt)


State 54

   21 stmt: Expr . ';'
   52 Expr: Expr . '+' Expr
   53     | Expr . '-' Expr
   54     | Expr . '*' Expr
   55     | Expr . '/' Expr
   56     | Expr . '%' Expr
   58     | Expr . '<' Expr
   59     | Expr . LE Expr
   60     | Expr . EQUAL Expr
   61     | Expr . NE Expr
   62     | Expr . GE Expr
   63     | Expr . '>' Expr
   64     | Expr . AND Expr
   65     | Expr . OR Expr
   66     | Expr . '^' Expr
   69     | Expr . '&' Expr
   70     | Expr . '|' Expr

    AND    shift, and go to state 76
    OR     shift, and go to state 77
    EQUAL  shift, and go to state 78
    NE     shift, and go to state 79
    GE     shift, and go to state 80
    LE     shift, and go to state 81
    '<'    shift, and go to state 82
    '>'    shift, and go to state 83
    '+'    shift, and go to state 84
    '-'    shift, and go to state 85
    '*'    shift, and go to state 86
    '/'    shift, and go to state 87
    '%'    shift, and go to state 88
    '&'    shift, and go to state 89
    '|'    shift, and go to state 90
    '^'    shift, and go to state 91
    ';'    shift, and go to state 92


State 55

   49 Expr: call .

    $default  reduce using rule 49 (Expr)


State 56

    9 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID stmtBlock .
